修复编译报错